[gd_scene load_steps=7 format=3 uid="uid://b0xsibskdisxr"]

[ext_resource type="Script" path="res://scripts/moving_platform.gd" id="1_ajf61"]
[ext_resource type="Texture2D" uid="uid://bupbf2eu6hdg3" path="res://sprites/alt-platform-on.png" id="1_anwrr"]
[ext_resource type="Script" path="res://scripts/one_way_platform.gd" id="2_kixrq"]
[ext_resource type="Texture2D" uid="uid://bvyt2450nli5a" path="res://sprites/platform_direction.png" id="3_32gu8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1uye"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve5lf"]
size = Vector2(15, 1)

[node name="MovingPlatform" type="Node2D" groups=["Save"]]
use_parent_material = true
script = ExtResource("1_ajf61")

[node name="OneWay" type="Node" parent="." node_paths=PackedStringArray("collision", "platform_position")]
script = ExtResource("2_kixrq")
collision = NodePath("../Platform/StaticBody2D/CollisionShape2D")
platform_position = NodePath("../OneWayMarker")

[node name="Platform" type="Node2D" parent="."]
use_parent_material = true

[node name="Sprite2D" type="Sprite2D" parent="Platform"]
use_parent_material = true
position = Vector2(0, 6)
texture = ExtResource("1_anwrr")

[node name="StaticBody2D" type="StaticBody2D" parent="Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_u1uye")

[node name="Area2D" type="Area2D" parent="Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Area2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_ve5lf")

[node name="OneWayMarker" type="Marker2D" parent="."]
position = Vector2(0, -1)

[node name="Position1" type="Marker2D" parent="."]
position = Vector2(-10, 0)

[node name="Position2" type="Marker2D" parent="."]
position = Vector2(10, 0)

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
use_parent_material = true
offset_left = -10.0
offset_top = -1.0
offset_right = -8.0
texture = ExtResource("3_32gu8")
stretch_mode = 1

[connection signal="body_entered" from="Platform/Area2D" to="OneWay" method="_on_body_entered"]
[connection signal="body_exited" from="Platform/Area2D" to="OneWay" method="_on_body_exited"]
